--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -4,7 +4,7 @@
   float: left;
   margin: 0.5em;
   width: 25%;
-  min-width: 14em;
+  min-width: 16em;
   max-width: 20em;
   height: auto;
   min-height: 8em;
